<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetworkUtils</string>
    <string name="action_settings">Settings</string>
    <string name="require_root_alert"> Open root privileges in Security Center !</string>
    <string name="ok_iknow">OK, I know</string>

    <!-- Capture -->
    <string name="capture">Capture</string>
    <string name="capture_controller_summary">Start/Stop Capture</string>
    <string name="capture_controller_title">Capture Switch</string>
    <string name="capture_interface_title">Interface</string>
    <string name="capture_write_file_summary">It will save file to sdcard/</string>
    <string name="capture_write_file_title">OutputFile</string>
    <string name="capture_write_file_defaultvalue">default_capture_name.pcap</string>

    <array name="capture_interface_list_entry">
        <item>current</item>
        <item>wlan0</item>
        <!-- FIXME  -->
        <item>rmmdata0</item>
    </array>

    <array name="capture_interface_list_value">
        <item>current</item>
        <item>wlan0</item>
        <!-- FIXME  -->
        <item>rmmdata0</item>
    </array>

    <!-- Wlan Latency -->
    <string name="wl_title">Wlan Latency</string>
    <string name="wl_controller_summary">Start/Stop Wlan Latenty Analysis</string>
    <string name="wl_controller_title"> Analysis Switch</string>
    <string name="wl_latency_timeMs_title"> Latency Time</string>
    <string name="wl_latency_timeMs_summary"> latency timeout. unit ms.</string>
    <string name="wl_latency_timeMs_defaultvalue">50</string>
    <string name="wl_latency_logfile_title"> Log File</string>
    <string name="wl_latency_logfile_summary"> ping data file.</string>
    <string name="wl_latency_logfile_defaultvalue"> networkutils_wl_logfile.txt</string>
    <string name="wl_latency_badlatency_logfile_title"> Latency Log File</string>
    <string name="wl_latency_badlatency_logfile_summary"> latency logfile.</string>
    <string name="wl_latency_badlatency_logfile_defaultvalue">networkutils_latency_logfile.txt </string>    

</resources>
